@@ -35,4 +35,28 @@ OpenJDK 64-Bit Server VM warning: INFO: os::commit_memory(0x00007f292a200000, 39
   * Java might need more memory than what is set via `-Xmx`, see [here](https://stackoverflow.com/questions/15282178/java-using-up-far-more-memory-than-allocated-with-xmx) for details. Try to reduce the amount of memory allocated via `-Xmx` to leave more memory for Java.
   * Try to increase the amount of memory available for the tool.
   
+#### An illegal reflective access operation has occurred
+
+* Error Message:
+```
+WARNING: An illegal reflective access operation has occurred
+WARNING: Illegal reflective access by io.airlift.compress.zstd.UnsafeUtil (file:/mnt/work/marc/moba/trioGen/bin/triogen-0.5.0-beta/lib/aircompressor-0.18.jar) to field java.nio.Buffer.address
+WARNING: Please consider reporting this to the maintainers of io.airlift.compress.zstd.UnsafeUtil
+WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+WARNING: All illegal access operations will be denied in a future release
+
+```
+* Troubleshooting:
+  * This warning can be ignored ([source](https://stackoverflow.com/questions/46230413/jdk9-an-illegal-reflective-access-operation-has-occurred-org-python-core-pysys)).
   
+#### No StackTrace
+
+* Error Message:
+```
+java.lang.NullPointerException
+
+```
+* Troubleshooting:
+  * Add `-XX:-OmitStackTraceInFastThrow` to your command ([Source](https://stackoverflow.com/questions/4659151/recurring-exception-without-a-stack-trace-how-to-reset)).
+
+ 
